# Hazel

./: .gitignore  .gitmodules  README.md  premake5.lua
.github/workflows/: main.yml
Hazel/: premake5.lua
Hazel-Editor/assets/shaders/: FlatColor.glsl
Hazel-Editor/src/: EditorLayer.cpp  HazelEditorApp.cpp
Hazel/src/: Hazel.h  hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  Window.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Layer.h  Log.cpp  Log.h  Timestep.h  Window.cpp  Window.h
Hazel/src/Hazel/ImGui/: ImGuiAPI.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Hazel/Scene/: Scene.cpp  Scene.h
Hazel/src/Platform/Android/: AndroidInput.cpp  AndroidInput.h  AndroidWindow.cpp  AndroidWindow.h
Hazelnut/: imgui.ini
Hazelnut/assets/scenes/: PinkCube.hazel
Hazelnut/assets/shaders/: Texture.glsl
Hazelnut/src/: EditorLayer.cpp  HazelnutApp.cpp
Sandbox/: HazelProfile-Runtime-OpenGL.json  HazelProfile-Runtime.json  HazelProfile-Shutdown.json  HazelProfile-Startup.json  imgui.ini
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: ExampleLayer.cpp  Sandbox2D.cpp  SandboxApp.cpp
android/: build.gradle  settings.gradle
android/projects/Hazel/: CMakeLists.txt
android/projects/Sandbox/: CMakeLists.txt  build.gradle
android/projects/Sandbox/assets/assets/shaders/: Texture.glsl
android/projects/Sandbox/src/main/: AndroidManifest.xml
android/projects/gradle/: outputfilename.gradle
scripts/: Shaderc-Debug-Build.bat
(+41 files in other folders)
